...
                            onClick = { endGame() },
                            modifier = Modifier.weight(1f),
                            colors = ButtonDefaults.buttonColors(
                                containerColor = MaterialTheme.colorScheme.error
                            )
                        ) {
                            Text(text = "End Game")
                        }
                    }
                    
                    if (dealButtonEnabled) {
                        Button(
                            onClick = { dealCards() },
...
                    if (!isPeggingPhase && selectCribButtonEnabled) {
                        Button(
                            onClick = { selectCardsForCrib() },
                            enabled = selectCribButtonEnabled,
                            modifier = Modifier.weight(1f)
                        ) {
                            Text(text = "Select for Crib")
                        }
                    }
                    
                    if (showHandCountingButton) {
                        Button(
                            onClick = { countHands() },
...
